--- a/css/top.css
+++ b/css/top.css
@@ -11,7 +11,7 @@ header {
   width: 100%;
   height: 80px;
   background-color: #ffffff;
-  box-shadow: 0px 0px 1px 1px #b0b0b0;
+  box-shadow: 0px 0px 5px 0px #b0b0b0 inset;
 }
 header div {
   /* 版心 */
@@ -36,15 +36,12 @@ header div div a {
   font-size: 21px;
 }
 header div div a:hover {
-  color: red;
+  color: #fe5341;
 }
 header div div a:nth-of-type(1) {
   flex: 1.2;
   background: url(../img/logonew.png) no-repeat 0px 14px;
   background-size: 80% 65%;
-}
-header div div a:nth-of-type(2) {
-  color: red;
 }
 header div div:nth-of-type(2) {
   /* 右侧 */
