--- a/css/top.less
+++ b/css/top.less
@@ -12,7 +12,7 @@ header {
     width: 100%;
     height: 80px;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 1px 1px rgb(176, 176, 176);
+    box-shadow: 0px 0px 5px 0px rgb(176, 176, 176) inset;
 
     div {
         /* 版心 */
@@ -38,7 +38,7 @@ header {
                 font-size: 21px;
 
                 &:hover {
-                    color: red;
+                    color: rgb(254, 83, 65);
                 }
             }
 
@@ -48,9 +48,9 @@ header {
                 background-size: 80% 65%;
             }
 
-            a:nth-of-type(2) {
-                color: red;
-            }
+            // a:nth-of-type(2) {
+            //     color: red;
+            // }
         }
 
         // 右侧
