--- a/css/register.less
+++ b/css/register.less
@@ -1,29 +1,29 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-}
+// * {
+//     padding: 0;
+//     margin: 0;
+//     box-sizing: border-box;
+//     list-style: none;
+//     text-decoration: none;
+// }
 
-#ifname-1 {
-    width: 100%;
-    height: 100px;
-}
+// #ifname-1 {
+//     width: 100%;
+//     height: 100px;
+// }
 
-.register-box {
-    width: 70%;
-    height: 800px;
-    margin: 0 auto;
-    border: 1px rgb(188, 188, 188) solid;
-    border-radius: 10px;
+// .register-box {
+//     width: 70%;
+//     height: 800px;
+//     margin: 0 auto;
+//     border: 1px rgb(188, 188, 188) solid;
+//     border-radius: 10px;
 
-    p {
-        font-size: 22px;
-        line-height: 26px;
-        margin-top: 20px;
-        padding: 0 20px;
-        color: rgb(71, 71, 71);
-        border-left: 7px rgb(254, 83, 65) solid;
-    }
-}
+//     p {
+//         font-size: 22px;
+//         line-height: 26px;
+//         margin-top: 20px;
+//         padding: 0 20px;
+//         color: rgb(71, 71, 71);
+//         border-left: 7px rgb(254, 83, 65) solid;
+//     }
+// }
