--- a/css/top.css
+++ b/css/top.css
@@ -40,8 +40,11 @@ header div div a:hover {
 }
 header div div a:nth-of-type(1) {
   flex: 1.2;
-  background: url(../img/logonew.png) no-repeat 0px 14px;
-  background-size: 80% 65%;
+}
+header div div a:nth-of-type(1) img {
+  width: 85%;
+  height: 70%;
+  margin-top: 10px;
 }
 header div div:nth-of-type(2) {
   /* 右侧 */
@@ -70,4 +73,17 @@ header div div:nth-of-type(2) button {
 header div div:nth-of-type(2) button:hover {
   background-color: #fe5341;
   color: white;
+}
+/* 图片删闪烁 */
+@keyframes fade {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.6;
+  }
+}
+a:hover img {
+  animation: fade 1s ease-in infinite;
 }
