--- a/css/top.less
+++ b/css/top.less
@@ -44,8 +44,14 @@ header {
 
             a:nth-of-type(1) {
                 flex: 1.2;
-                background: url(../img/logonew.png) no-repeat 0px 14px;
-                background-size: 80% 65%;
+
+                // background: url(../img/logonew.png) no-repeat 0px 14px;
+                // background-size: 80% 65%;
+                img {
+                    width: 85%;
+                    height: 70%;
+                    margin-top: 10px;
+                }
             }
 
             // a:nth-of-type(2) {
@@ -87,5 +93,25 @@ header {
             }
         }
     }
+
+}
+
+
+
+/* 图片删闪烁 */
+@keyframes fade {
+
+    0%,
+    100% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.6;
+    }
+}
+
+a:hover img {
+    animation: fade 1s ease-in infinite;
 
 }
