--- a/css/top.less
+++ b/css/top.less
@@ -91,6 +91,25 @@ header {
                     color: white;
                 }
             }
+
+            #top_user {
+                width: 200px;
+                height: 45px;
+                line-height: 45px;
+                position: absolute;
+                top: 20px;
+                font-size: 16px;
+                right: 95px;
+                color: rgb(254, 83, 65);
+                display: none;
+                padding-left: 50px;
+                background: url(../img/用户名.png)no-repeat 8px 3px;
+                background-size: 35px 35px;
+
+                &:hover {
+                    cursor: pointer;
+                }
+            }
         }
     }
 
