--- a/css/index.css
+++ b/css/index.css
@@ -5,18 +5,15 @@
   list-style: none;
   text-decoration: none;
 }
-#ifname-1 {
-  width: 100%;
-  height: 105px;
-}
 #ifname-2 {
   width: 100%;
   height: 350px;
+  margin-bottom: -5px;
 }
 nav {
   width: 100%;
   height: 300px;
-  margin-top: -35px;
+  margin-top: -80px;
   background: url(../img/original.jpg) no-repeat -260px 5px;
   overflow: hidden;
 }
@@ -474,8 +471,23 @@ nav div button {
   background-color: #f7f7f7;
   display: none;
 }
-/* 图片删闪烁 */
+#div-return {
+  width: 55px;
+  height: 55px;
+  position: fixed;
+  bottom: 50px;
+  right: 100px;
+  background: url(../img/back.png) no-repeat 10px 18px;
+  background-color: #e8e8e8;
+  border-radius: 10px;
+  display: none;
+}
+#div-return:hover {
+  background-color: #c6c6c6;
+  cursor: pointer;
+}
 @keyframes fade {
+  /* 图片删闪烁 */
   0%,
   100% {
     opacity: 1;
@@ -486,4 +498,17 @@ nav div button {
 }
 a:hover img {
   animation: fade 1s ease-in infinite;
+}
+@keyframes fly {
+  0% {
+    transform: translate(1200px, -600px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+}
+#fly {
+  animation: fly 1s;
 }
