--- a/css/index.less
+++ b/css/index.less
@@ -6,21 +6,22 @@
     text-decoration: none;
 }
 
-#ifname-1 {
-    width: 100%;
-    height: 105px;
-}
+// #ifname-1 {
+//     width: 100%;
+//     height: 105px;
+// }
 
 #ifname-2 {
     width: 100%;
     height: 350px;
+    margin-bottom: -5px;
 }
 
 // 顶部图片
 nav {
     width: 100%;
     height: 300px;
-    margin-top: -35px;
+    margin-top: -80px;
     background: url(../img/original.jpg)no-repeat -260px 5px;
     overflow: hidden;
 
@@ -539,9 +540,30 @@ nav {
     display: none;
 }
 
-/* 图片删闪烁 */
+// 返回底部
+#div-return {
+    width: 55px;
+    height: 55px;
+    position: fixed;
+    bottom: 50px;
+    right: 100px;
+    background: url(../img/back.png) no-repeat 10px 18px;
+    background-color: rgb(232, 232, 232);
+    border-radius: 10px;
+    display: none;
+
+    &:hover {
+        background-color: rgb(198, 198, 198);
+        cursor: pointer;
+    }
+
+}
+
+
+//图片删闪烁
 @keyframes fade {
 
+    /* 图片删闪烁 */
     0%,
     100% {
         opacity: 1;
@@ -555,4 +577,21 @@ nav {
 a:hover img {
     animation: fade 1s ease-in infinite;
 
+}
+
+// 音响飞入动画
+@keyframes fly {
+    0% {
+        transform: translate(1200px, -600px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translate(0, 0);
+        opacity: 1;
+    }
+}
+
+#fly {
+    animation: fly 1s;
 }
