--- a/report/report-css/hottest.less
+++ b/report/report-css/hottest.less
@@ -14,11 +14,14 @@ h1,h2,h3{
     height: 100px;
     border: 0;
 }
+#iframename2 {
+    width: 100%;
+    height: 350px;
+    border: 0;
+  }
 /*体验报告*/
 .nav{
     width: 1000px;
-    min-width: 1000px;
-    text-align: left;
     margin: 0 auto;
     h1{
         text-align: center; 
@@ -32,12 +35,12 @@ h1,h2,h3{
             padding-bottom: 12px;
             width: 165px;
             font-size: 18px;
-            &:nth-of-type(1){
+            &:nth-of-type(2){
                 color: #fe5431;
                 border-bottom: 4px #fe5431 solid;
                 padding-bottom: 8px;
             }
-            &:nth-of-type(2){
+            &:nth-of-type(1){
                 color: #a3a3a3;
             }
         }
@@ -55,93 +58,121 @@ h1,h2,h3{
         padding-top: 30px;
         overflow: hidden;
         /*内容左边部分*/
-        &>ul{
+        .box-l{
             width: 700px;
             margin-right: 30px;
             // background-color: rgb(252, 5, 5);
             float: left;
-            &>li{
-                width: 100%;
-                position: relative;
-                .angle{
-                    border: 1px solid #E6E9E9;
-                    border-radius: 6px;
-                    font-size: 0;
-                    overflow: hidden;
-                    img{
-                        width: 100%;
-                       height: 100%;
-                    }
-                    .pic-txt{
-                        position: absolute;
-                        left: 0;
-                        bottom: 64px;
-                        width: 100%;
-                        height: 118px;
-                        padding: 10px 22px;
-                        background: rgba(255, 255, 255, 0.9);
-                        border-radius: 0 0 6px 6px;
-                        &>p{
-                            font-size: 18px;
-                            padding: 9px 0 12px;
-                            font-weight: normal;
-                            color: #333;
+            ul{
+               
+                &>li{
+                    width: 100%;
+                    position: relative;
+                    .angle{
+                        border: 1px solid #E6E9E9;
+                        border-radius: 6px;
+                        font-size: 0;
+                        overflow: hidden;
+                        img{
+                            width: 100%;
+                           height: 100%;
                         }
-                        .pic-con{
-                            margin: 12px 0;
-                            color:#a3a3a3;
-                            font-size: 13px;
-                            p:nth-of-type(1){
-                                float: left;
-                               
-                                span:nth-of-type(1){
-                                    display: inline-block;
-                                    width: 20px;
-                                    height: 20px;
-                                    background: url('../../img/tx.jpg') no-repeat 0 0;
-                                    background-size: 100%;
-                                    border-radius: 50%;
-                                    vertical-align:middle;
+                        .pic-txt{
+                            position: absolute;
+                            left: 0;
+                            bottom: 64px;
+                            width: 100%;
+                            height: 118px;
+                            padding: 10px 22px;
+                            background: rgba(255, 255, 255, 0.9);
+                            border-radius: 0 0 6px 6px;
+                            &>p{
+                                font-size: 18px;
+                                padding: 9px 0 12px;
+                                font-weight: normal;
+                                color: #333;
+                            }
+                            .pic-con{
+                                margin: 12px 0;
+                                color:#a3a3a3;
+                                font-size: 13px;
+                                p:nth-of-type(1){
+                                    float: left;
+                                   
+                                    span:nth-of-type(1){
+                                        display: inline-block;
+                                        width: 20px;
+                                        height: 20px;
+                                        background: url('../../img/tx.jpg') no-repeat 0 0;
+                                        background-size: 100%;
+                                        border-radius: 50%;
+                                        vertical-align:middle;
+                                    }
+                                    span:nth-of-type(2){
+                                        color: #fe695a;
+                                        margin: 0 8px;
+                                    }
                                 }
-                                span:nth-of-type(2){
-                                    color: #fe695a;
-                                    margin: 0 8px;
+                                p:nth-of-type(2){
+                                    float: right;
+                                    span:nth-of-type(1){
+                                        display: inline-block;
+                                        vertical-align: middle;
+                                        text-indent: 15px;
+                                        background: url('../../img/zan.png') no-repeat 0 2px;
+                                    }
+                                    span:nth-of-type(2){
+                                        display: inline-block;
+                                        margin-left: 8px;
+                                        vertical-align: middle;
+                                        text-indent: 15px;
+                                        background: url('../../img/reply.png') no-repeat 0 2px;
+                                    }
                                 }
                             }
-                            p:nth-of-type(2){
-                                float: right;
-                                span:nth-of-type(1){
-                                    display: inline-block;
-                                    vertical-align: middle;
-                                    text-indent: 15px;
-                                    background: url('../../img/zan.png') no-repeat 0 2px;
-                                }
-                                span:nth-of-type(2){
-                                    display: inline-block;
-                                    margin-left: 8px;
-                                    vertical-align: middle;
-                                    text-indent: 15px;
-                                    background: url('../../img/reply.png') no-repeat 0 2px;
-                                }
-                            }
+                            
                         }
-                        
+                    }
+                    /* li下面部分*/
+                    .li-btm{
+                        text-align: center;
+                        height: 48px;
+                        line-height: 48px;
+                        font-size: 14px;
+                        color: #a3a3a3;
+                        border-radius: 6px;
+                        border: 1px solid #e6e9e9;
+                        margin: 15px 0;
                     }
                 }
-                /* li下面部分*/
-                .li-btm{
-                    text-align: center;
-                    height: 48px;
-                    line-height: 48px;
-                    font-size: 14px;
-                    color: #a3a3a3;
-                    border-radius: 6px;
-                    border: 1px solid #e6e9e9;
-                    margin: 15px 0;
-                }
+    
             }
 
+            /*加载更多部分*/
+        .more{
+        text-align: center;
+        padding:10px 0 50px 0;
+        button{
+            display: inline-block;
+            text-indent: 20px;
+            background: url('../../img/more.png' ) no-repeat 0px center;
+            color: #fe5341;
+            border: none;
+            // display: none;
         }
+        .load{
+            display: inline-block;
+            width: 145px;
+            margin: 0 auto;
+            text-indent: 29px;
+            background: url('../../img/loading-icon.gif' ) no-repeat 0px center;
+            color: #fe5341;
+            display: none;
+        }
+    }
+
+        }
+
         /*内容右边部分*/
         .box-r{
             width: 270px;
@@ -176,7 +207,31 @@ h1,h2,h3{
         }
     }
 }
+.over{
+    width: 500px;
+    height: 50px;
+    background-color: rgb(94, 255, 0);
+    color:#fff;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 5px;
+    margin: 0 auto;
+}
 
+/* 图片删闪烁 */
+@keyframes fade {
+    0%,
+    100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.6;
+    }
+}
+
+img:hover  {
+    animation: fade 1s ease-in infinite;
+}
 
 
 
