--- a/trial/trial-css/syz.css
+++ b/trial/trial-css/syz.css
@@ -25,8 +25,6 @@ h3 {
 /*免费试用*/
 .nav {
   width: 1000px;
-  min-width: 1000px;
-  text-align: left;
   margin: 0 auto;
 }
 .nav h1 {
@@ -105,6 +103,7 @@ h3 {
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 5;
 }
 .big .all ul li > a img {
   width: 100%;
@@ -114,9 +113,9 @@ h3 {
   text-align: center;
 }
 .big .all ul li > a .all-btm h2 {
-  font-size: 16px;
+  font-size: 14px;
   height: 48px;
-  font-weight: bold;
+  font-weight: 500;
   color: #333;
 }
 .big .all ul li > a .all-btm p:nth-of-type(1) span {
@@ -143,4 +142,17 @@ h3 {
 }
 .big .more a {
   color: #a3a3a3;
+}
+/* 图片删闪烁 */
+@keyframes fade {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.6;
+  }
+}
+img:hover {
+  animation: fade 1s ease-in infinite;
 }
