--- a/trial/trial-css/syz.less
+++ b/trial/trial-css/syz.less
@@ -25,8 +25,6 @@
   /*免费试用*/
 .nav{
     width: 1000px;
-    min-width: 1000px;
-    text-align: left;
     margin: 0 auto;
     h1{
         text-align: center; 
@@ -103,6 +101,7 @@
                         position: absolute;
                         top: 0;
                         right: 0;
+                        z-index: 5;
                     }
                     img{
                         width: 100%;
@@ -111,9 +110,9 @@
                         padding: 8px 8px 14px;
                         text-align: center;
                         h2{
-                            font-size: 16px;
+                            font-size: 14px;
                             height: 48px;
-                            font-weight: bold;
+                            font-weight: 500;
                             color: #333;
                         }
                         p:nth-of-type(1){
@@ -154,4 +153,19 @@
             color: #a3a3a3;
         }
     }
+}
+
+/* 图片删闪烁 */
+@keyframes fade {
+    0%,
+    100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.6;
+    }
+}
+
+img:hover  {
+    animation: fade 1s ease-in infinite;
 }
