--- a/shopping/shopping-css/hottest.less
+++ b/shopping/shopping-css/hottest.less
@@ -11,7 +11,7 @@ h1,h2,h3{
 }
 #iframename1{
     width: 100%;
-    height: 100px;
+    height: 105px;
     border: 0;
 }
 #iframename2 {
@@ -71,6 +71,7 @@ h1,h2,h3{
                         border-radius: 6px 6px 0 0;
                         width: 100%;
                     }
+                }
                     p:nth-of-type(1){
                         font-size: 14px;
                         height: 55px;
@@ -101,6 +102,11 @@ h1,h2,h3{
                         .sp1{
                             background: url(../../img/xin.png) no-repeat left center;
                         }
+
+                        .sp1_{
+                            background: url(../../img/xinRedh.png) no-repeat left center;
+                            background-size: 12px;
+                        }
                         
                         .sp2{
                             background: url(../../img/reply.png) no-repeat left center;
@@ -117,7 +123,7 @@ h1,h2,h3{
 
                   
                    
-                }
+              
             }
         
         }
