--- a/shopping/shopping-css/newest.css
+++ b/shopping/shopping-css/newest.css
@@ -12,7 +12,7 @@ h3 {
 }
 #iframename1 {
   width: 100%;
-  height: 100px;
+  height: 105px;
   border: 0;
 }
 #iframename2 {
@@ -69,7 +69,7 @@ h3 {
   background-color: #fff;
   position: relative;
 }
-.big .all ul li img {
+.big .all ul li a img {
   border-radius: 6px 6px 0 0;
   width: 100%;
 }
