--- a/shopping/shopping-css/newest.less
+++ b/shopping/shopping-css/newest.less
@@ -10,7 +10,7 @@ h1,h2,h3{
 }
 #iframename1{
     width: 100%;
-    height: 100px;
+    height: 105px;
     border: 0;
 }
 #iframename2 {
@@ -64,12 +64,13 @@ h1,h2,h3{
                 border-radius: 6px;
                 background-color: #fff;
                 position: relative;
-                // a{
+                a{
                    
                     img{
                         border-radius: 6px 6px 0 0;
                         width: 100%;
                     }
+                }
                     p:nth-of-type(1){
                         font-size: 14px;
                         height: 55px;
@@ -120,7 +121,7 @@ h1,h2,h3{
 
                   
                    
-                // }
+               
             }
         
         }
