--- a/Coldplay/Coldplay-css/hottest.css
+++ b/Coldplay/Coldplay-css/hottest.css
@@ -9,7 +9,7 @@ li {
 
 iframe {
     width: 100%;
-    height: 100px;
+    height: 105px;
 }
 
 h1,
@@ -103,7 +103,7 @@ a {
 
 .name {
     margin-left: 10px;
-    margin-top:5px ;
+    margin-top: 5px;
     font-size: 14px;
     height: 45px;
     overflow: hidden;
@@ -152,7 +152,7 @@ a {
     margin-left: 3px;
 }
 
-.txe .txe-2>.xin>img{
+.txe .txe-2>.xin>img {
     position: absolute;
     top: 6px;
     left: 3px;
@@ -168,11 +168,12 @@ a {
     color: #a3a3a3;
     background-size:12px 13px
 }              */
-.txe .txe-2>.xin2>img{
+.txe .txe-2>.xin2>img {
     position: absolute;
     top: 6px;
     left: 30px;
 }
+
 .txe .txe-2>.xin2 {
     color: #a3a3a3;
     /* background: url(../../img/xin.png) no-repeat left center; */
@@ -205,11 +206,13 @@ a {
     padding-left: 20px;
 
 }
+
 /* 底部 */
-.bbc{
-   
+.bbc {
+
     height: 350px;
 }
+
 /* .xin_{
     background: url(../../img/xinRedh.png)no-repeat 0px center;
     background-size:12px 13px
@@ -225,7 +228,7 @@ a {
     background-size:12px 13px
 } */
 
-.xin{
+.xin {
     background: url(../../img/xinRedh.png)no-repeat 0px center;
-    background-size:12px 13px}
-
+    background-size: 12px 13px
+}
