--- a/css/top.less
+++ b/css/top.less
@@ -54,9 +54,9 @@ header {
                 }
             }
 
-            // a:nth-of-type(2) {
-            //     color: red;
-            // }
+            .color-a {
+                color: red;
+            }
         }
 
         // 右侧
@@ -133,4 +133,9 @@ header {
 a:hover img {
     animation: fade 1s ease-in infinite;
 
+}
+
+
+#wsad {
+    color: greenyellow;
 }
