--- a/css/login.less
+++ b/css/login.less
@@ -31,8 +31,11 @@
         line-height: 26px;
         margin-top: 20px;
         padding: 0 20px;
-        color: rgb(71, 71, 71);
         border-left: 7px rgb(254, 84, 65) solid;
+
+        a {
+            color: rgb(71, 71, 71);
+        }
     }
 
     // 版心
@@ -62,6 +65,7 @@
             margin-left: 0;
             font-size: 18px;
             color: white;
+            margin-top: 10px;
         }
 
         .h-span {
@@ -69,4 +73,22 @@
             margin-left: 10px;
         }
     }
+}
+
+//  新增样式 记住密码
+#jzma {
+    width: 15px;
+    height: 15px;
+    margin-bottom: 2px;
+    vertical-align: middle;
+
+}
+
+label {
+    color: gray;
+}
+
+#wjma {
+    margin-left: 220px;
+    color: gray;
 }
