--- a/css/login.css
+++ b/css/login.css
@@ -27,8 +27,10 @@
   line-height: 26px;
   margin-top: 20px;
   padding: 0 20px;
-  color: #474747;
   border-left: 7px #fe5441 solid;
+}
+.login-box p a {
+  color: #474747;
 }
 .login-box div {
   /* 版心 */
@@ -55,8 +57,22 @@
   margin-left: 0;
   font-size: 18px;
   color: white;
+  margin-top: 10px;
 }
 .login-box div .h-span {
   color: gray;
   margin-left: 10px;
+}
+#jzma {
+  width: 15px;
+  height: 15px;
+  margin-bottom: 2px;
+  vertical-align: middle;
+}
+label {
+  color: gray;
+}
+#wjma {
+  margin-left: 220px;
+  color: gray;
 }
