--- a/css/register.less
+++ b/css/register.less
@@ -31,8 +31,11 @@
         line-height: 26px;
         margin-top: 20px;
         padding: 0 20px;
-        color: rgb(71, 71, 71);
         border-left: 7px rgb(254, 84, 65) solid;
+
+        a {
+            color: rgb(71, 71, 71);
+        }
     }
 
     // 版心
