--- a/Coldplay/Coldplay-css/category.css
+++ b/Coldplay/Coldplay-css/category.css
@@ -209,3 +209,12 @@ a {
 
     height: 350px;
 }
+
+/*==================================================== 新增 */
+.-xin_1 {
+    background: url(../../img/xin.png)no-repeat 0px 5px;
+}
+
+.-xin_2 {
+    background: url(../../img/xin.png)no-repeat 0px 5px;
+}
